# gameDev

./: .gitignore  CMakeLists.txt  README.md  game  game.cpp  plan.txt
maps/: Makefile  mapHandler.cpp  test.cpp
maps/Tiled/: testMap.json
maps/mapResources/: Color.cpp  Color.h  Continent.cpp  Continent.h  Map.cpp  Map.h  Territory.cpp  Territory.h  Tile.cpp  Tile.h
playerResources/: Player.cpp  Player.h
shapes/: Square.cpp
src/: CMakeLists.txt
src/gameResources/: CMakeLists.txt
src/gameResources/inputResources/: MouseHandler.cpp  MouseHandler.hpp
src/gameResources/mapResources/: Color.cpp  Continent.cpp  Continent.hpp  Map.cpp  Map.hpp  Territory.cpp  Territory.hpp  Tile.cpp  Tile.hpp  TileTypes.hpp
src/gameResources/playerResources/: Player.cpp  Player.hpp
src/gameResources/shapes/: Square.cpp  Square.hpp
src/maps/: CMakeLists.txt  mapHandler.cpp
src/test/: CMakeLists.txt  graphicsTest.cpp  inputTest.cpp  test.cpp  visualTest.cpp
